@@ -1,3 +1,7 @@
+2005-03-10 16:58  antirez
+
+	* ChangeLog, jim.c, jim.h, test.tcl: lrange command (me)
+
 2005-03-10 11:03  antirez
 
 	* Makefile, README, bench.tcl, jim.c, tools/benchtable.tcl: Some
